# Python_Web_13_2

./: README.md  pyproject.toml
hw10_project/: .env  README.md  config.py  db.sqlite3
hw10_project/hw10_project/: asgi.py  settings.py  urls.py  wsgi.py
hw10_project/quotes/: admin.py  config.ini  forms.py  models.py  urls.py  utils.py  views.py
hw10_project/quotes/migrations/: 0001_initial.py  0002_alter_author_born_date_alter_author_fullname_quote.py  0003_remove_quote_author_quote_author.py  0004_tag_alter_author_description_remove_quote_author_and_more.py  0005_alter_author_born_location_alter_author_fullname_and_more.py
hw10_project/quotes/static/quotes/: style.css
hw10_project/quotes/templates/quotes/: addauthor.html  addquote.html  addtag.html  base.html  details.html  index.html  popular_tags.html  quotes_with_tag.html
hw10_project/quotes/templatetags/: extract.py
hw10_project/users/: forms.py  urls.py  views.py
hw10_project/users/templates/users/: logout.html  signin.html  signup.html
hw10_project/utils/: authors.json  create.py  migration.py  models.py  quotes.json
