[tool.poetry]
name = "python-web-10"
version = "0.1.0"
description = ""
authors = ["tetianakondra <tatjana.ukon@gmail.com>"]
readme = "README.md"
packages = [{include = "python_web_10"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
pymongo = "^4.3.3"
mongoengine = "^0.27.0"
psycopg = "^3.1.8"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
